Fixed Overflow Issue due to + at bottom

--- a/styles/mobile_styles.css
+++ b/styles/mobile_styles.css
@@ -160,6 +160,10 @@
         font-size: 2vw;
     }
 
+    .email-letter {
+        display: none;
+    }
+
     .email-letter input {
         width: 60vw;
         margin-right: -15vw;
@@ -178,7 +182,7 @@
 
     .help, .social-links, .address {
       /*  height: 5vh; */
-        width: 100%;
+        width: 90%;
         padding: 0 0 0 5vw;
         margin: 0 0 -5vw 0;        
     }
@@ -201,7 +205,8 @@
         justify-content: center;
         align-items: center;
         height: 6vw;
-        transform: translate(40vw, -7vw);
+        transform: translate(85vw, -7vw);
+        width: fit-content;
         
     }
 
@@ -210,7 +215,8 @@
         justify-content: center;
         align-items: center;
         height: 6vw;
-        transform: translate(40vw, -7vw);
+        transform: translate(85vw, -7vw);
+        width: fit-content;
     }
 
     .foot-contents {
